publicaiton update july 2024

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#todo: incorporate different collection types rather than a catch all publications, requires other changes to template\n",
     "publist = {\n",
     "    \"journal\":{\n",
-    "        \"file\": \"YllaPublications.bib\",\n",
+    "        \"file\": \"Publications_202407.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,32 +71,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SUCESSFULLY PARSED Ylla2015A: \" Towards understanding the molecular basis of cockroach terga ... \"\n",
+      "SUCESSFULLY PARSED Ylla2016: \" The {microRNA} toolkit of insects  \"\n",
+      "SUCESSFULLY PARSED Harrison2018: \" Hemimetabolous genomes reveal molecular basis of termite eus ... \"\n",
+      "SUCESSFULLY PARSED Llonga2018: \" Diversity of {piRNA} expression patterns during the ontogeny ... \"\n",
+      "SUCESSFULLY PARSED Harrison2018c: \" Expansions of key protein families in the {German} cockroach ... \"\n",
+      "SUCESSFULLY PARSED VentosAlfonso2019: \" Zelda and the maternal-to-zygotic transition in cockroaches  \"\n",
+      "SUCESSFULLY PARSED Ylla2018: \" Comparative transcriptomics in two extreme neopterans reveal ... \"\n",
+      "SUCESSFULLY PARSED Ylla2017: \" Comparative analysis of {miRNA} expression during the develo ... \"\n",
+      "SUCESSFULLY PARSED ventos-alfonso_dnmt1_2020: \" {DNMT1} promotes genome methylation and early embryo develop ... \"\n",
+      "SUCESSFULLY PARSED Ylla2020: \" {MirCure}: a tool for quality control, filter and curation o ... \"\n",
+      "SUCESSFULLY PARSED Montanes2021: \" {siRNA} enrichment in {Argonaute} 2-depleted {Blattella} ger ... \"\n",
+      "SUCESSFULLY PARSED Ylla2021: \" Insights into the genomic evolution of insects from cricket  ... \"\n",
+      "SUCESSFULLY PARSED Herrera2021: \" Molecular characterization of genetic diversity in apricot c ... \"\n",
+      "SUCESSFULLY PARSED Blondel2021: \" Evolution of a {Cytoplasmic} {Determinant}: {Evidence} for t ... \"\n",
+      "SUCESSFULLY PARSED Tarikere2021: \" Distinct gene expression dynamics in germ line and somatic t ... \"\n",
+      "SUCESSFULLY PARSED Nakamura2022: \" Genomics and genome editing techniques of crickets, an emerg ... \"\n",
+      "WARNING Missing Expected Field 'journal' from entry Mito2022: \" Cricket: {The} third domestica ... \"\n",
+      "SUCESSFULLY PARSED fernandez-nicolas_reduction_2023: \" Reduction of embryonic {E93} expression as a hypothetical dr ... \"\n",
       "SUCESSFULLY PARSED kulkarni_oskar_2023: \" oskar acts with the transcription factor {Creb} to regulate  ... \"\n",
-      "SUCESSFULLY PARSED Fernandez-Nicolas2023: \" {Reduction of embryonic E93 expression as a hypothetical dri ... \"\n",
-      "SUCESSFULLY PARSED Mito2022: \" {Cricket: The third domesticated insect}  \"\n",
-      "SUCESSFULLY PARSED Nakamura2022: \" {Genomics and genome editing techniques of crickets, an emer ... \"\n",
-      "SUCESSFULLY PARSED Tarikere2021: \" {Distinct gene expression dynamics in germ line and somatic  ... \"\n",
-      "SUCESSFULLY PARSED Blondel2021: \" {Evolution of a cytoplasmic determinant: evidence for the bi ... \"\n",
-      "SUCESSFULLY PARSED Herrera2021: \" {Molecular characterization of genetic diversity in apricot  ... \"\n",
-      "SUCESSFULLY PARSED Ylla2020: \" {MirCure: a tool for quality control, filter and curation of ... \"\n",
-      "SUCESSFULLY PARSED Ventos-Alfonso2020a: \" {DNMT1 Promotes Genome Methylation and Early Embryo Developm ... \"\n",
-      "SUCESSFULLY PARSED Ylla2017: \" {Comparative analysis of miRNA expression during the develop ... \"\n",
-      "SUCESSFULLY PARSED Ylla2018: \" {Comparative transcriptomics in two extreme neopterans revea ... \"\n",
-      "SUCESSFULLY PARSED VentosAlfonso2019a: \" {Zelda and the maternal-to-zygotic transition in cockroaches ... \"\n",
-      "SUCESSFULLY PARSED Harrison2018c: \" {Expansions of key protein families in the German cockroach  ... \"\n",
-      "SUCESSFULLY PARSED Llonga2018: \" {Diversity of piRNA expression patterns during the ontogeny  ... \"\n",
-      "SUCESSFULLY PARSED Ylla2016: \" {The microRNA toolkit of insects}  \"\n",
-      "SUCESSFULLY PARSED Ylla2015A: \" {Towards understanding the molecular basis of cockroach terg ... \"\n",
-      "SUCESSFULLY PARSED Ylla2021: \" {Insights into the genomic evolution of insects from cricket ... \"\n",
-      "SUCESSFULLY PARSED Montanes2021: \" {siRNA enrichment in Argonaute 2-depleted Blattella germanic ... \"\n",
-      "SUCESSFULLY PARSED Harrison2018: \" {Hemimetabolous genomes reveal molecular basis of termite eu ... \"\n"
+      "SUCESSFULLY PARSED andrysiak_dysregulated_2023: \" Dysregulated iron homeostasis in dystrophin-deficient cardio ... \"\n",
+      "SUCESSFULLY PARSED garrigos_two_2023: \" Two avian {Plasmodium} species trigger different transcripti ... \"\n",
+      "SUCESSFULLY PARSED szrajer_genome_2024: \" The genome assembly and annotation of the cricket {Gryllus}  ... \"\n",
+      "SUCESSFULLY PARSED andrysiak_upregulation_2024: \" Upregulation of utrophin improves the phenotype of {Duchenne ... \"\n",
+      "SUCESSFULLY PARSED andrysiak_dysregulated_2024: \" Dysregulated iron homeostasis in dystrophin-deficient cardio ... \"\n",
+      "SUCESSFULLY PARSED lopez-martin_insights_2024: \" Insights into the early transcriptomic response against wate ... \"\n"
      ]
     }
    ],
@@ -221,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Mark Harrison,  Evelien Jongepier,  Hugh Robertson,  Nicolas Arning,  Tristan Bitard-Feildel,  Hsu Chao,  Christopher Childers,  Huyen Dinh,  Harshavardhan Doddapaneni,  Shannon Dugan,  Johannes Gowin,  Carolin Greiner,  Yi Han,  Haofu Hu,  Daniel Hughes,  Ann Huylmans,  Carsten Kemena,  Lukas Kremer,  Sandra Lee,  Alberto Lopez-Ezquerra,  Ludovic Mallet,  Jose Monroy-Kuhn,  Annabell Moser,  Shwetha Murali,  Donna Muzny,  Saria Otani,  Maria Piulachs,  Monica Poelchau,  Jiaxin Qu,  Florentine Schaub,  Ayako Wada-Katsumata,  Kim Worley,  Qiaolin Xie,  <b>Guillem Ylla</b>,  Michael Poulsen,  Richard Gibbs,  Coby Schal,  Stephen Richards,  Xavier Belles,  Judith Korb,  Erich Bornberg-Bauer, \"Hemimetabolous genomes reveal molecular basis of termite eusociality.\" <em>Nature Ecology and Evolution</em>, 2018.'"
+       "' María López-Martín,  Javier Montero-Pau,  <b>Guillem Ylla</b>,  María Gómez-Guillamón,  Belén Picó,  Ana Pérez-de-Castro, \"Insights into the early transcriptomic response against watermelon mosaic virus in melon.\" <em>BMC Plant Biology</em>, 2024.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
