--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -158,6 +158,7 @@
     "            ## Make Ylla lab people bold and replace bad characters\n",
     "            citation=str(citation).replace(\"Guillem Ylla\", \"<b>Guillem Ylla</b>\")\n",
     "            citation=str(citation).replace(\"Gabriela Machaj\", \"<b>Gabriela Machaj</b>\")\n",
+    "            citation=str(citation).replace(\"Szymon Szrajer\", \"<b>Szymon Szrajer</b>\")\n",
     "\n",
     "            ## fix accents\n",
     "            citation=html_escape(citation).replace('{\\&apos;{e}}', 'e').replace('{\\~{n}}', 'n').replace('{\\&apos;{o}}s', 'o')\n",
