update md generator

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -184,10 +184,10 @@
     "            md += \"\"\"\\npermalink: \"\"\" + publist[pubsource][\"collection\"][\"permalink\"]  + html_filename\n",
     "            \n",
     "            note = False\n",
-    "            if \"note\" in b.keys():\n",
-    "                if len(str(b[\"note\"])) > 5:\n",
-    "                    md += \"\\nexcerpt: '\" + html_escape(b[\"note\"]) + \"'\"\n",
-    "                    note = True\n",
+    "            #if \"note\" in b.keys():\n",
+    "                #if len(str(b[\"note\"])) > 5:\n",
+    "                    #md += \"\\nexcerpt: '\" + html_escape(b[\"note\"]) + \"'\"\n",
+    "                    #note = True\n",
     "\n",
     "            md += \"\\ndate: \" + str(pub_date) \n",
     "\n",
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "' María López-Martín,  Javier Montero-Pau,  <b>Guillem Ylla</b>,  María Gómez-Guillamón,  Belén Picó,  Ana Pérez-de-Castro, \"Insights into the early transcriptomic response against watermelon mosaic virus in melon.\" <em>BMC Plant Biology</em>, 2024.'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
