--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#todo: incorporate different collection types rather than a catch all publications, requires other changes to template\n",
     "publist = {\n",
     "    \"journal\":{\n",
-    "        \"file\": \"Publications_202407.bib\",\n",
+    "        \"file\": \"Publications_2025_07.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,17 +92,24 @@
       "SUCESSFULLY PARSED Ylla2021: \" Insights into the genomic evolution of insects from cricket  ... \"\n",
       "SUCESSFULLY PARSED Herrera2021: \" Molecular characterization of genetic diversity in apricot c ... \"\n",
       "SUCESSFULLY PARSED Blondel2021: \" Evolution of a {Cytoplasmic} {Determinant}: {Evidence} for t ... \"\n",
-      "SUCESSFULLY PARSED Tarikere2021: \" Distinct gene expression dynamics in germ line and somatic t ... \"\n",
       "SUCESSFULLY PARSED Nakamura2022: \" Genomics and genome editing techniques of crickets, an emerg ... \"\n",
       "WARNING Missing Expected Field 'journal' from entry Mito2022: \" Cricket: {The} third domestica ... \"\n",
       "SUCESSFULLY PARSED fernandez-nicolas_reduction_2023: \" Reduction of embryonic {E93} expression as a hypothetical dr ... \"\n",
       "SUCESSFULLY PARSED kulkarni_oskar_2023: \" oskar acts with the transcription factor {Creb} to regulate  ... \"\n",
-      "SUCESSFULLY PARSED andrysiak_dysregulated_2023: \" Dysregulated iron homeostasis in dystrophin-deficient cardio ... \"\n",
       "SUCESSFULLY PARSED garrigos_two_2023: \" Two avian {Plasmodium} species trigger different transcripti ... \"\n",
       "SUCESSFULLY PARSED szrajer_genome_2024: \" The genome assembly and annotation of the cricket {Gryllus}  ... \"\n",
       "SUCESSFULLY PARSED andrysiak_upregulation_2024: \" Upregulation of utrophin improves the phenotype of {Duchenne ... \"\n",
       "SUCESSFULLY PARSED andrysiak_dysregulated_2024: \" Dysregulated iron homeostasis in dystrophin-deficient cardio ... \"\n",
-      "SUCESSFULLY PARSED lopez-martin_insights_2024: \" Insights into the early transcriptomic response against wate ... \"\n"
+      "SUCESSFULLY PARSED lopez-martin_insights_2024: \" Insights into the early transcriptomic response against wate ... \"\n",
+      "SUCESSFULLY PARSED lichawska-cieslar_mcpip1_2024: \" {MCPIP1} modulates the {miRNA}‒{mRNA} landscape in keratinoc ... \"\n",
+      "SUCESSFULLY PARSED yamashita_non-gonadal_2025: \" Non-gonadal expression of {piRNAs} is widespread across {Art ... \"\n",
+      "WARNING Missing Expected Field 'journal' from entry calvo_pirnas_2025: \" {piRNAs} are abundant in the e ... \"\n",
+      "WARNING Missing Expected Field 'journal' from entry herrera_dormancy_2025: \" Dormancy {Dynamics} in {Japane ... \"\n",
+      "SUCESSFULLY PARSED ito_chromosome-scale_2025: \" Chromosome-scale whole genome assembly and annotation of the ... \"\n",
+      "WARNING Missing Expected Field 'journal' from entry lopez_erga-bge_2025: \" {ERGA}-{BGE} {Reference} {Geno ... \"\n",
+      "SUCESSFULLY PARSED matsuoka_establishment_2025: \" Establishment of {CRISPR}/{Cas9}-based knock-in in a hemimet ... \"\n",
+      "WARNING Missing Expected Field 'journal' from entry tarikere_chinmo_2025: \" Chinmo is a novel regulator of ... \"\n",
+      "SUCESSFULLY PARSED tarikere_distinct_2022: \" Distinct gene expression dynamics in germ line and somatic t ... \"\n"
      ]
     }
    ],
@@ -263,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
