update pub names bold

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -166,6 +166,12 @@
     "            citation=str(citation).replace(\"Guillem Ylla\", \"<b>Guillem Ylla</b>\")\n",
     "            citation=str(citation).replace(\"Gabriela Machaj\", \"<b>Gabriela Machaj</b>\")\n",
     "            citation=str(citation).replace(\"Szymon Szrajer\", \"<b>Szymon Szrajer</b>\")\n",
+    "            citation=str(citation).replace(\"Takahisa Yamashita\", \"<b>Takahisa Yamashita</b>\")\n",
+    "            citation=str(citation).replace(\"Krystian Komenda\", \"<b>Krystian Komenda</b>\")\n",
+    "            citation=str(citation).replace(\"Rafał Miłodrowski\", \"<b>Rafał Miłodrowski</b>\")\n",
+    "            citation=str(citation).replace(\"Dominik Robak\", \"<b>Dominik Robak</b>\")\n",
+    "            citation=str(citation).replace(\"Tomasz Gaczorek\", \"<b>Tomasz Gaczorek</b>\")\n",
+    "\n",
     "\n",
     "            ## fix accents\n",
     "            citation=html_escape(citation).replace('{\\&apos;{e}}', 'e').replace('{\\~{n}}', 'n').replace('{\\&apos;{o}}s', 'o')\n",
@@ -235,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' María López-Martín,  Javier Montero-Pau,  <b>Guillem Ylla</b>,  María Gómez-Guillamón,  Belén Picó,  Ana Pérez-de-Castro, \"Insights into the early transcriptomic response against watermelon mosaic virus in melon.\" <em>BMC Plant Biology</em>, 2024.'"
+       "' Shreeharsha Tarikere,  <b>Guillem Ylla</b>,  Cassandra Extavour, \"Distinct gene expression dynamics in germ line and somatic tissue during ovariole morphogenesis in Drosophila melanogaster.\" <em>G3 GenestextbarGenomestextbarGenetics</em>, 2022.'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
